Utils/AutoZoom/Utils/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VC++_Examples/Setup_Example/ARC_SpectraPro_dll.h

// function definitions
typedef unsigned _int16 (CALLBACK* LPFNDLL_Ver) (long &, long &, long &);
//Communications
typedef unsigned _int16 (CALLBACK* LPFNDLL_Search_For_Mono) (long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Close_Mono) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Valid_Mono_Enum) (long);
//Grating
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Turret) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Turret) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Turret_Gratings) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Grating) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Density) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Grating_Installed) (long, long);
//Mirrors
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Diverter_Valid) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Diverter_Pos) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Diverter_Pos) (long, long, long);
//Slits
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Slit_Type) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Slit_Width) (long, long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Slit_Width) (long, long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Slit_Home) (long, long);
//Filter
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Present) (long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Position) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_set_Mono_Filter_Position) (long, long);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Min_Pos) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_get_Mono_Filter_Max_Pos) (long, long &);
typedef unsigned _int16 (CALLBACK* LPFNDLL_Mono_Filter_Home) (long);
LPFNDLL_Ver ARC_Ver;       // function pointer to ARC_Ver
//Communications
LPFNDLL_Search_For_Mono                ARC_Search_For_Mono;
LPFNDLL_Close_Mono                     ARC_Close_Mono;
LPFNDLL_Valid_Mono_Enum                ARC_Valid_Mono_Enum;
//Grating
LPFNDLL_get_Mono_Turret                ARC_get_Mono_Turret;
LPFNDLL_set_Mono_Turret                ARC_set_Mono_Turret;
LPFNDLL_get_Mono_Turret_Gratings       ARC_get_Mono_Turret_Gratings;
LPFNDLL_get_Mono_Grating               ARC_get_Mono_Grating;
LPFNDLL_set_Mono_Grating               ARC_set_Mono_Grating;
LPFNDLL_get_Mono_Grating_Density       ARC_get_Mono_Grating_Density;
LPFNDLL_get_Mono_Grating_Installed     ARC_get_Mono_Grating_Installed;
//Mirrors
LPFNDLL_get_Mono_Diverter_Valid        ARC_get_Mono_Diverter_Valid;
LPFNDLL_get_Mono_Diverter_Pos          ARC_get_Mono_Diverter_Pos;
LPFNDLL_set_Mono_Diverter_Pos          ARC_set_Mono_Diverter_Pos;
//Slits
LPFNDLL_get_Mono_Slit_Type             ARC_get_Mono_Slit_Type;
LPFNDLL_get_Mono_Slit_Width            ARC_get_Mono_Slit_Width;
LPFNDLL_set_Mono_Slit_Width            ARC_set_Mono_Slit_Width;
LPFNDLL_Mono_Slit_Home                 ARC_Mono_Slit_Home;
//Filter
LPFNDLL_get_Mono_Filter_Present        ARC_get_Mono_Filter_Present;
LPFNDLL_get_Mono_Filter_Position       ARC_get_Mono_Filter_Position;
LPFNDLL_set_Mono_Filter_Position       ARC_set_Mono_Filter_Position;
LPFNDLL_get_Mono_Filter_Min_Pos        ARC_get_Mono_Filter_Min_Pos;
LPFNDLL_get_Mono_Filter_Max_Pos        ARC_get_Mono_Filter_Max_Pos;
LPFNDLL_Mono_Filter_Home               ARC_Mono_Filter_Home;