Utils/AutoZoom/Utils/PrincetonInstruments/emICCD/Final MonoControl 5.2.4 install/SpectraPro_SDK/ARC_SpectraPro_SDK/VB_Examples/VB_Example/DLL_Use_ExampleF.frm


'Monochromator Grating
Private Declare Function ARC_get_Mono_Turret Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Turret As Long) As Integer
Private Declare Function ARC_set_Mono_Turret Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Turret As Long) As Integer
Private Declare Function ARC_get_Mono_Turret_Gratings Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Gratings_Per_Turret As Long) As Integer
Private Declare Function ARC_get_Mono_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Grating As Long) As Integer
Private Declare Function ARC_set_Mono_Grating Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long) As Integer
Private Declare Function ARC_get_Mono_Grating_Blaze Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Blaze_Var As Variant) As Integer
Private Declare Function ARC_get_Mono_Grating_Density Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long, Groove_MM As Long) As Integer
Private Declare Function ARC_get_Mono_Grating_Installed Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Grating As Long) As Integer

'Monochromator Diverter Mirrors
Private Declare Function ARC_get_Mono_Diverter_Valid Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long) As Integer
Private Declare Function ARC_get_Mono_Diverter_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, Diverter_Pos As Long) As Integer
Private Declare Function ARC_set_Mono_Diverter_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, ByVal Diverter_Pos As Long) As Integer
Private Declare Function ARC_get_Mono_Diverter_Pos_Var Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Diverter_Num As Long, Diverter_Pos As Variant) As Integer

'Monochromator Slits
Private Declare Function ARC_get_Mono_Slit_Type Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Type As Long) As Integer
Private Declare Function ARC_get_Mono_Slit_Type_Var Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Type As Variant) As Integer
Private Declare Function ARC_get_Mono_Slit_Width Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, Slit_Width As Long) As Integer
Private Declare Function ARC_set_Mono_Slit_Width Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long, ByVal Slit_Width As Long) As Integer
Private Declare Function ARC_Mono_Slit_Home Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Slit_Pos As Long) As Integer
Private Declare Function ARC_Mono_Slit_Name_Var Lib "ARC_SpectraPro.dll" (ByVal Slit_Num As Long, Slit_Name_Var As Variant) As Integer

'Monochromator Filter Wheel (not available on all models)
Private Declare Function ARC_get_Mono_Filter_Present Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Position Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_set_Mono_Filter_Position Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, ByVal Position As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Min_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_get_Mono_Filter_Max_Pos Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long, Position As Long) As Integer
Private Declare Function ARC_Mono_Filter_Home Lib "ARC_SpectraPro.dll" (ByVal Mono_Enum As Long) As Integer

' the current monochromator
Dim Mono_Enum As Long


Private Sub CloseBtn_Click()
If ARC_Close_Mono(Mono_Enum) <> 0 Then
   List1.Clear
   List1.AddItem ("Mono closed")
   Else
   List1.Clear
   List1.AddItem ("Error : Mono Close")
   End If
End Sub

Private Sub EnumEdt_Change()
' this is done using VB's error handling, catches severe typo's in the EnumEdt feild
On Error GoTo ConversionErrorHandler
' Store the latest Mono_Enum value ... this allows support of multiple Monochromators
Mono_Enum = EnumEdt.Text
' indicate if the current Enum is open and therefore valid
If ARC_Valid_Mono_Enum(Mono_Enum) <> 0 Then
   OpenChk.Value = 1 ' The device is open
   Else
   OpenChk.Value = 0 ' The Device is not open, or invalid
   End If
Exit Sub

ConversionErrorHandler:  ' an error occured converting data to a usable value

End Sub

Private Sub FilterPosBtn_Click()
'This function only works with motorized filterwheels, and is not available on all models
Dim NewFilter As Long

' this is done using VB's error handling, catches severe typo's in the Edit field
On Error GoTo ConversionErrorHandler
NewFilter = FilterEdt.Text
' Change the Filter position
If ARC_set_Mono_Filter_Position(Mono_Enum, NewFilter) = 0 Then
   List1.Clear
   List1.AddItem ("Error : Invalid Filter Operation")
   Else
   List1.Clear
   End If

ConversionErrorHandler:  ' an error occured converting data to a usable value
End Sub

Private Sub FindMonoBtn_Click()
' Search for Monochromators in the system
Dim Mono_Count As Integer
Dim TempStr As String

' Search for Monochromators
If ARC_Search_For_Mono(Num_Found) <> 0 Then
   ' List the Index and Model of each Monochromator found
   List1.Clear
   Mono_Count = 0
   
   Do While Mono_Count < Num_Found
      TempStr = Mono_Count
      TempStr = TempStr + " Index : "
      ' Get the Monochromator Model
      If ARC_get_Mono_preOpen_Model(Mono_Count, Model_Var) <> 0 Then
         TempStr = TempStr + Model_Var
         End If
      ' Add the Monochromator to the list
      List1.AddItem (TempStr)
      ' increment the index number
      Mono_Count = Mono_Count + 1
      Loop
   Else
   ' No Monochromators where found
   List1.Clear
   List1.AddItem ("Error : No Monochromators Found")
   End If
End Sub

Private Sub Form_Load()
' On load verify the ARC_SpectraPro.dll loaded by displaying it's Version
Dim TempStr1 As String
Dim TempStr2 As String

' get the dll version
TempStr1 = "ARC_SpectraPro.dll ver. "
ThrowAway = ARC_Ver(Majorval, Minorval, Buildval)
TempStr2 = Majorval
TempStr1 = TempStr1 + TempStr2 + "."
TempStr2 = Minorval
TempStr1 = TempStr1 + TempStr2 + "."
TempStr2 = Buildval
TempStr1 = TempStr1 + TempStr2
' Display the DLL version
DLLLabel.Caption = TempStr1
Form1.Caption = TempStr1

End Sub

Private Sub HomeFilterBtn_Click()
'This function only works with motorized filterwheels, and is not available on all models

' Home the Filter position
If ARC_Mono_Filter_Home(Mono_Enum) = 0 Then
   List1.Clear
   List1.AddItem ("Error : Invalid Filter Home Operation")
   Else
   List1.Clear
   End If
End Sub

Private Sub HomeSlitBtn_Click()
'This function only works with motorized slits, all other slits will return an error
Dim NewSlit As Long

' this is done using VB's error handling, catches severe typo's in the Edit field
On Error GoTo ConversionErrorHandler
NewSlit = SlitNumEdt.Text
' Home the motorized slit
If ARC_Mono_Slit_Home(Mono_Enum, NewSlit) = 0 Then
   List1.Clear
   List1.AddItem ("Error : Invalid Slit Home Operation")
   Else
   List1.Clear
   End If
Exit Sub

ConversionErrorHandler:  ' an error occured converting data to a usable value
End Sub

Private Sub Label1_Click()

End Sub

Private Sub MonoInfoBtn_Click()
Dim outvar As Variant
Dim outstr As String
Dim outstr2 As String
Dim outdbl As Double
Dim outint As Long
Dim outbool As Integer
Dim LoopVal As Long
Dim wkstr As String
